# so_unload_delete_demo

./: CMakeLists.txt  README.md
include/: objectbase.h
src/exe/: main.cpp
src/so/: so.cpp
